--- a/learningRecord/23-12-26.md
+++ b/learningRecord/23-12-26.md
@@ -1,4 +1,4 @@
-# Lab5
+# lab02
 
 ### 记录时间：23-12-26
 
@@ -6,7 +6,7 @@
 
 ### 学习时长:1h
 
-### 完成任务：Lab6
+### 完成任务：Lab02
 
 ### 遇到困难：
 * 如果一个函数没返回值的话应回答Nothing
